# crypto-crawler-ffi

./: CMakeLists.txt  Cargo.toml  Cross.toml  README.md  build.rs  cbindgen.toml
example/: CMakeLists.txt  README.md  example.cpp
include/: crypto_crawler.h  crypto_crawler_ffi.h
src/: lib.rs  market_type.rs  msg.rs
