[package]
name = "crypto-crawler-ffi"
version = "1.7.1"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
crypto-crawler = "3.2.5"
crypto-market-type = "1.0.5"
crypto-msg-type = "1.0.3"
serde_json = "1"

[build-dependencies]
cbindgen = "0.20.0"

[profile.release]
lto = true
codegen-units = 1
